bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:2: error: not found: value temps1
  if ((temp1<0 && temp2>100) || (temps1>100 && temp2<0)){
                                 ^